force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Account__c.field-meta.xml
<CustomField>
    <fullName>gaid__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gift Aid Declarations</relationshipLabel>
    <relationshipName>Gift_Aid_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>