force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Active__c.field-meta.xml
<CustomField>
    <fullName>gaid__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>