force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>gaid__Close_Reason__c</fullName>
    <description>Reason for closing the declaration. Only “Termination of Employment” is pre-shipped. Other values can be added through customization.</description>
    <inlineHelpText>Reason for closing the declaration. Only “Termination of Employment” is pre-shipped. Other values can be added through customization.</inlineHelpText>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TerminationOfEmployment</fullName>
                <label>Termination Of Employment</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>