force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>gaid__Confirmation_Date__c</fullName>
    <description>By default the value is set to Date Made when you save the declaration; start of cooling-off period for oral declarations.</description>
    <inlineHelpText>By default the value is set to Date Made when you save the declaration; start of cooling-off period for oral declarations.</inlineHelpText>
    <label>Confirmation Date</label>
    <type>Date</type>
</CustomField>