force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Contact__c.field-meta.xml
<CustomField>
    <fullName>gaid__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Aid Declarations</relationshipLabel>
    <relationshipName>Gift_Aid_Declarations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>