force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Cooling_Off_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>gaid__Cooling_Off_Period_End_Date__c</fullName>
    <description>Indicates when the mandatory cooling off period ends for oral declarations. Automatically calculated when you save the declaration. Modify if needed.</description>
    <inlineHelpText>Indicates when the mandatory cooling off period ends for oral declarations. Automatically calculated when you save the declaration. Modify if needed.</inlineHelpText>
    <label>Cooling Off Period End Date</label>
    <type>Date</type>
</CustomField>