force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Date_Made__c.field-meta.xml
<CustomField>
    <fullName>gaid__Date_Made__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date the declaration was made (or when you received it).</description>
    <inlineHelpText>Date the declaration was made (or when you received it).</inlineHelpText>
    <label>Date Made</label>
    <type>Date</type>
</CustomField>