force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__End_Date__c.field-meta.xml
<CustomField>
    <fullName>gaid__End_Date__c</fullName>
    <description>Date when declaration can no longer be used to claim Gift Aid. Leave empty if declaration is ongoing.</description>
    <inlineHelpText>Date when declaration can no longer be used to claim Gift Aid. Leave empty if declaration is ongoing.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>