force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Firstname__c.field-meta.xml
<CustomField>
    <fullName>gaid__Firstname__c</fullName>
    <description>Automatically filled with first name of contact when you save the declaration. Enter a different name here to override the contact value if needed.</description>
    <inlineHelpText>Automatically filled with first name of contact when you save the declaration. Enter a different name here to override the contact value if needed.</inlineHelpText>
    <label>Custom First Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>