force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Housename_or_number__c.field-meta.xml
<CustomField>
    <fullName>gaid__Housename_or_number__c</fullName>
    <description>House or building number or name for UK residents, for non-UK residents, enter the Street, Number and City.</description>
    <inlineHelpText>House or building number or name for UK residents, for non-UK residents, enter the Street, Number and City.</inlineHelpText>
    <label>House Name or Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>