force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__In_Cooling_off_Period__c.field-meta.xml
<CustomField>
    <fullName>gaid__In_Cooling_off_Period__c</fullName>
    <description>Formula field indicating if the declaration is cooling off today.</description>
    <formula>IF(ISBLANK(gaid__Cooling_Off_Period_End_Date__c), false, gaid__Cooling_Off_Period_End_Date__c &gt;= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field indicating if the declaration is cooling off today.</inlineHelpText>
    <label>In Cooling Off Period</label>
    <type>Checkbox</type>
</CustomField>