force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>gaid__Last_Name__c</fullName>
    <formula>BLANKVALUE( gaid__Lastname__c , gaid__Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Last Name</label>
    <type>Text</type>
</CustomField>