force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Overseas__c.field-meta.xml
<CustomField>
    <fullName>gaid__Overseas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If contact has a non-UK address, add checkmark here as required by HMRC.</description>
    <inlineHelpText>If contact has a non-UK address, add checkmark here as required by HMRC.</inlineHelpText>
    <label>Overseas</label>
    <type>Checkbox</type>
</CustomField>