force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Postalcode__c.field-meta.xml
<CustomField>
    <fullName>gaid__Postalcode__c</fullName>
    <description>Postal code for UK resident, for non-UK resident, enter &quot;X&quot;</description>
    <inlineHelpText>Postal code for UK resident, for non-UK resident, enter &quot;X&quot;</inlineHelpText>
    <label>Postal code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>