force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Reason_for_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>gaid__Reason_for_Deactivation__c</fullName>
    <description>Optional free text field for a more detailed explanation of closing the declaration.</description>
    <inlineHelpText>Optional free text field for a more detailed explanation of closing the declaration.</inlineHelpText>
    <label>Reason for closing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>