force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>gaid__Start_Date__c</fullName>
    <description>Date when declaration can start being used to claim Gift Aid. Leave empty if declaration can be used for past donations.</description>
    <inlineHelpText>Date when declaration can start being used to claim Gift Aid. Leave empty if declaration can be used for past donations.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>