force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Valid_Now__c.field-meta.xml
<CustomField>
    <fullName>gaid__Valid_Now__c</fullName>
    <description>Formula field that calculates of the declaration is valid today.</description>
    <formula>IF ( 
        AND ( 
            gaid__Active__c, 
            NOT(gaid__In_Cooling_off_Period__c), 
            OR(ISBLANK(gaid__Start_Date__c), gaid__Start_Date__c &lt;= TODAY()),
            OR(ISBLANK(gaid__End_Date__c), gaid__End_Date__c &gt;= TODAY())), 
        true, 
        false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that calculates of the declaration is valid today.</inlineHelpText>
    <label>Valid Now</label>
    <type>Checkbox</type>
</CustomField>