force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/sj_UI_gaid_Gift_Aid_Declaration__c.field-meta.xml
<CustomField>
    <fullName>sj_UI_gaid_Gift_Aid_Declaration__c</fullName>
    <externalId>true</externalId>
    <label>sj_UI_gaid_Gift_Aid_Declaration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>